--- a/src/sass/components/slider.scss
+++ b/src/sass/components/slider.scss
@@ -26,7 +26,7 @@
   @media only screen and (min-width: 1681px) {
     font-size: 3.5rem;
     line-height: 4.06rem;
-    margin-left: 8.625rem;
+    margin-left: 8.5rem;
     margin-top: 60px;
     width: 80%;
   }
@@ -57,7 +57,7 @@
   @media only screen and (min-width: 1681px) {
     font-size: 1.25rem;
     line-height: 1.56rem;
-    margin-left: 8.625rem;
+    margin-left: 8.5rem;
     overflow-wrap: break-word;
     padding-bottom: 2.25rem;
     text-align: left;
@@ -105,7 +105,7 @@
     padding-left: 3rem;
   }
   @media only screen and (min-width: 1681px) {
-    margin-left: 8.625rem;
+    margin-left: 8.5rem;
     padding-left: 0.75rem;
   }
 }
